syntax = "proto3";
package pb;

service DriverService {
  rpc GetDriverInfo(DriverInfoReq) returns (DriverInfoResp);
  rpc TakeOrder(DriverReq) returns (DriverResp);
}

message DriverInfoReq {
  string username = 1;
  string password = 2;
}

message DriverInfoResp {
  int64 user_id = 1;
  string name = 2;
  int32 age = 3;
  int64 account_num = 4;
  float asset = 5;
}

message DriverReq {
  int64 driver_id = 1;
  string driver_name = 2;
  string location = 3;
  string car = 4;
}

message DriverResp {
  bool status = 1;
  string passenger_name = 2;
  int64 start_time = 3;
  string origin = 4;
  string destination = 5;
  string path = 6;
}

